# readers-transmission

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-test.yml
src/fairmat_readers_transmission/: __init__.py  perkin_elmers_asc.py  readers.py
tests/: test_perkin_elmer_asc.py  test_reader.py  test_readers.py
