[build-system]
requires = [
    "setuptools>=61.0.0",
    "setuptools-scm>=8.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "fairmat-readers-transmission"
dynamic = ["version"]
description = "A package containing file readers for transmission spectrophotometry raw files."
readme = "README.md"
authors = [
    { name = "Sarthak Kapoor", email = "sarthak.kapoor@physik.hu-berlin.de" },
    { name = "Hampus Näsström", email = "hampus.naesstroem@physik.hu-berlin.de" },
    { name = "Andrea Albino", email = "andrea.albino@physik.hu-berlin.de" },
    { name = "Sebastian Brückner", email = "sebastian.brueckner@ikz-berlin.de" },
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "numpy",
    "pandas",
    "pint",
]
[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "ruff",
    "structlog",
]

[project.license]
file = "LICENSE"

[project.urls]
"Homepage" = "https://github.com/FAIRmat-NFDI/readers-transmission"
"Bug Tracker" = "https://github.com/FAIRmat-NFDI/readers-transmission/issues"

[tool.ruff]
include = ["src/*.py", "tests/*.py"]
# Same as Black.
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "W",  # pycodestyle
    "UP", # pyupgrade
    "F",  # pyflakes
    "I",  # isort
    "PL", # pylint
]
ignore = [
    "PLC0415",  # `import` should be at the top-level of a file
]
fixable = ["ALL"]

[tool.ruff.format]
# use single quotes for strings.
quote-style = "single"

# indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.setuptools.packages.find]
where = [
    "src",
]

[tool.setuptools_scm]
write_to = "src/fairmat_readers_transmission/_version.py"
